2006-01-24  Jacob Ilsoe Christensen  <jacobilsoe@gmail.com>

	* Base.glade: Fixed spelling mistake.

2006-01-24 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Templates/CombineDescriptor.cs: Added getter for
	the list of entry descriptors. Take the combine name from the new
	ProjectCreateInformation.CombineName property.
	* MonoDevelop.Ide.Templates/ProjectTemplate.cs: Added Id property
	(taken from the codon ID). Added CreateCombine method, which does
	what CreateProject was doing until now. CreateProject now creates
	a project but not a combine.
	
	* Base.glade:
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs:  Some improvements
	in the new project dialog.
	
	* MonoDevelop.Ide.addin.xml: Use some new icons for new project and
	new solution. Moved here the BlankSolution template from the CSharpBinding.
	* Makefile.am: Added BlankSolution.
	
	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Commands/FileCommands.cs: Track api changes.

2006-01-23  Jacob Ilsoe Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.Ide.Codons/PadOptionCodon.cs:
	* MonoDevelop.Ide.Codons/PadCodon.cs:
	Added internationalization.

2006-01-22 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: In CloseAllDocuments,
	the active document is now the last one to close. It avoids firing too
	many ActiveDocumentChanged events.
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs:
	* MonoDevelop.Ide.Gui/IWorkbenchWindow.cs: Removed unused events.
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Make sure the active
	window changed event is fired only when really necessary.

2006-01-18 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/ProjectCommands.cs: Disable build and
	run commands if the current file is not a valid build target.
	* MonoDevelop.Ide.Gui/Document.cs: Added IsBuildTarget property.

2006-01-18 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Ide.Templates/FileTemplate.cs: Added an Id property,